--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       <div class="container header-container">
         <nav class="navi">
           <a href="./index.html" class="logo">Web<span>Studio</span></a>
+          <button class="menu-button" type="button">
+            <svg width="24" height="24">
+              <use href="./images/icons.svg#icon-solid-menu"></use>
+            </svg>
+          </button>
           <ul class="menu-list">
             <li class="header-list">
               <a class="menu-item active-link" href="./index.html">Studio</a>
@@ -141,6 +146,7 @@
           <ul class="list-three">
             <li class="team-image">
               <img
+                srcset="./images/team/img4@2x.jpg 2x"
                 src="./images/team/img4.jpg"
                 alt="Product Designer"
                 width="264"
@@ -184,6 +190,7 @@
             </li>
             <li class="team-image">
               <img
+                srcset="./images/team/img1@2x.jpg 2x"
                 src="./images/team/img1.jpg"
                 alt="Frontend Developer"
                 width="264"
@@ -226,6 +233,7 @@
             </li>
             <li class="team-image">
               <img
+                srcset="./images/team/img2@2x.jpg 2x"
                 src="./images/team/img2.jpg"
                 alt="Marketing"
                 width="264"
@@ -268,6 +276,7 @@
             </li>
             <li class="team-image">
               <img
+                srcset="./images/team/img3@2x.jpg 2x"
                 src="./images/team/img3.jpg"
                 alt="UI Designer"
                 width="264"
@@ -322,6 +331,7 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-image"
+                  srcset="./images/portfolio/img1@2x.jpg 2x"
                   src="./images/portfolio/img1.jpg"
                   alt="mobil-app"
                   width="360"
@@ -344,6 +354,7 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-image"
+                  srcset="./images/portfolio/img2@2x.jpg 2x"
                   src="./images/portfolio/img2.jpg"
                   alt="phone-qr-code"
                   width="360"
@@ -366,6 +377,7 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-image"
+                  srcset="./images/portfolio/img3@2x.jpg 2x"
                   src="./images/portfolio/img3.jpg"
                   alt="laptop-app"
                   width="360"
@@ -388,6 +400,7 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-image"
+                  srcset="./images/portfolio/img4@2x.jpg 2x"
                   src="./images/portfolio/img4.jpg"
                   alt="taxi-mobil-service"
                   width="360"
@@ -410,6 +423,7 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-image"
+                  srcset="./images/portfolio/img5@2x.jpg 2x"
                   src="./images/portfolio/img5.jpg"
                   alt="mobil-screen"
                   width="360"
@@ -432,6 +446,7 @@
               <div class="overlay-box">
                 <img
                   class="portfolio-image"
+                  srcset="./images/portfolio/img6@2x.jpg 2x"
                   src="./images/portfolio/img6.jpg"
                   alt="girl-with-mobile"
                   width="360"
@@ -518,7 +533,9 @@
         </div>
       </div>
     </footer>
+
     <!-- Backdrop -->
+
     <div class="backdrop">
       <div class="callback-wrapper">
         <button type="button" class="modal-close">
